# di0

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: reconcile.md  workspace.md
docs/adapters/: README.md  metabase.md
docs/adr/: 0000-template.md  0001-ports-and-adapters-with-data-independence.md  0002-python-core-wrapped-by-skills.md  0003-no-hand-rolled-sql-checker.md  0004-swappable-execution-port.md  0005-schema-from-version-controlled-sources.md  README.md
examples/: README.md  di0.profile.yml
examples/arr_overview/: arr_by_customer.sql  spec.yml
examples/context/: analytics-context.md
examples/deliverables/: arr_overview.yml
examples/queries/: active_customers.sql
queries/: arr_monthly.sql
skills/: README.md
skills/compose-and-validate/: SKILL.md
skills/execute-and-author/: SKILL.md
skills/investigate/: SKILL.md
skills/narrate/: SKILL.md
skills/reconcile/: SKILL.md
skills/resolve-schema/: SKILL.md
src/di0/: __init__.py  cli.py  core.py  deliverable.py  guard.py  ports.py  profile.py  reconcile.py  registry.py
src/di0/adapters/: _sqlglot.py  dbt_manifest.py  drizzle_schema.py  duckdb_combine.py  strapi_schema.py  (+6 more)
tests/: test_authoring_extras.py  test_cli_check.py  test_cli_init.py  test_dashboard_authoring.py  test_drift_check.py  test_drizzle_cockroach.py  test_explain_validation.py  test_invariant_guard.py  test_metabase_execution.py  test_offline_validation.py  test_output_swap.py  test_reconcile.py  test_skills_layer.py  test_strapi_postgres.py  test_validation_loop.py
tests/fixtures/: manifest.json
(+3 files in other folders)
