[project]
name = "di0"
version = "0.1.0rc1"
description = "data independence, zero hard-coded references - a thin, break-safe analytics wrapper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlglot>=30",
    "pyyaml>=6",
    "duckdb>=1.5",
]

[project.scripts]
di0 = "di0.cli:main"

[dependency-groups]
dev = [
    "pytest>=9",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/di0"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
